Reduce storage requirements vor Tombstone objects in VectorSet and VectorMap.